--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ a { text-decoration: none; color: #000; }
 
 <div id="num-apt-mapped" class="site-note" style="text-align: center;">
 	<span style="font-size:10pt;"><b>
-		2024, Jun 1st	</b></span>
+		2024, Jun 2nd	</b></span>
 </div>
 
 <div class="mapp-filter display-none">
@@ -1678,6 +1678,222 @@ a { text-decoration: none; color: #000; }
 <td class="bldg">25</td>
 <td class="unit">113 114 115 116 213 214 215 216</td>
 <td class="coord">36.821334, -119.868536</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
+</div><div class="mapp-content">
+
+<span class="mapp-title">
+	Birchwood Grove
+	<span class="mapp-city">-
+	Fresno, CA 93726
+	</span>
+</span>
+
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">4718 E Alamos Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102 103</td>
+<td class="coord">36.805143594855814, -119.7400705256548</td>
+</tr>
+
+<tr>
+<td class="unit">104 105 106</td>
+<td class="coord">36.80513855476557, -119.73987758951263</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4727 E Alamos Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102</td>
+<td class="coord">36.80565564919356, -119.73930960142864</td>
+</tr>
+
+<tr>
+<td class="unit">103 104</td>
+<td class="coord">36.80589292089393, -119.7393013546587</td>
+</tr>
+
+<tr>
+<td class="unit">105 106</td>
+<td class="coord">36.80610808422343, -119.73934911032401</td>
+</tr>
+
+<tr>
+<td class="unit">107 108</td>
+<td class="coord">36.80632083008243, -119.73931411724995</td>
+</tr>
+
+<tr>
+<td class="unit">109 110</td>
+<td class="coord">36.80610796264968, -119.73954965589333</td>
+</tr>
+
+<tr>
+<td class="unit">111 pool</td>
+<td class="coord">36.806106490344746, -119.739885013049</td>
+</tr>
+
+<tr>
+<td class="unit">112 113</td>
+<td class="coord">36.805823972528124, -119.73964209826983</td>
+</tr>
+
+<tr>
+<td class="unit">114 115</td>
+<td class="coord">36.805870572825945, -119.73990859089025</td>
+</tr>
+
+<tr>
+<td class="unit">116 117</td>
+<td class="coord">36.80583461900604, -119.74017737045246</td>
+</tr>
+
+<tr>
+<td class="unit">118 119</td>
+<td class="coord">36.80565513587529, -119.74030073762533</td>
+</tr>
+
+<tr>
+<td class="unit">120 121</td>
+<td class="coord">36.8056937126723, -119.74007257331401</td>
+</tr>
+
+<tr>
+<td class="unit">122 123</td>
+<td class="coord">36.805662190728384, -119.73976725154671</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4732 E Alamos Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102 103</td>
+<td class="coord">36.80513760024149, -119.73951070456562</td>
+</tr>
+
+<tr>
+<td class="unit">104 105 106</td>
+<td class="coord">36.805142996212055, -119.73931006438049</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4860 N Woodrow Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102</td>
+<td class="coord">36.80625572766447, -119.74047984435849</td>
+</tr>
+
+<tr>
+<td class="unit">103 104</td>
+<td class="coord">36.80602495566988, -119.74046569688397</td>
+</tr>
+
+<tr>
+<td class="unit">105 106</td>
+<td class="coord">36.80580485396545, -119.7404942324109</td>
+</tr>
+
+<tr>
+<td class="unit">107 108</td>
+<td class="coord">36.80611031029279, -119.74025998088811</td>
+</tr>
+
+<tr>
+<td class="unit">109 110</td>
+<td class="coord">36.80638346645822, -119.74017147088145</td>
+</tr>
+
+<tr>
+<td class="unit">111 112</td>
+<td class="coord">36.80635833171115, -119.73990827461762</td>
+</tr>
+
+<tr>
+<td class="unit">113 114</td>
+<td class="coord">36.80638912276188, -119.73963260253996</td>
+</tr>
+
+<tr>
+<td class="unit">115 116</td>
+<td class="coord">36.80655845247409, -119.73931356667428</td>
+</tr>
+
+<tr>
+<td class="unit">117 118</td>
+<td class="coord">36.806552903786915, -119.73957670704667</td>
+</tr>
+
+<tr>
+<td class="unit">119 120</td>
+<td class="coord">36.80654745666138, -119.7399230535635</td>
+</tr>
+
+<tr>
+<td class="unit">121 122</td>
+<td class="coord">36.80655910239233, -119.74024814394814</td>
+</tr>
+
+<tr>
+<td class="unit">123 124</td>
+<td class="coord">36.8065601806187, -119.74051994611433</td>
 </tr>
 
 </tbody>
@@ -13254,6 +13470,265 @@ a { text-decoration: none; color: #000; }
 <tr>
 <td class="unit">134 135 136 234 235 236</td>
 <td class="coord">36.82884675608742, -119.80343399860269</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
+</div><div class="mapp-content">
+
+<span class="mapp-title">
+	Nees Park Villas
+	<span class="mapp-city">-
+	Fresno, CA 93720
+	</span>
+</span>
+
+<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>E Nees Ave</u> (closest to <b>N Paula Ave</b>).</li></ul>
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">2670 E Nees Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102</td>
+<td class="coord">36.852511595978754, -119.73574390014866</td>
+</tr>
+
+<tr>
+<td class="unit">103 104</td>
+<td class="coord">36.85250708281915, -119.73600886176416</td>
+</tr>
+
+<tr>
+<td class="unit">105 106</td>
+<td class="coord">36.852605552717186, -119.7357415679618</td>
+</tr>
+
+<tr>
+<td class="unit">107 108</td>
+<td class="coord">36.85276534205978, -119.73595081723575</td>
+</tr>
+
+<tr>
+<td class="unit">109 110</td>
+<td class="coord">36.852977035084535, -119.73595237253873</td>
+</tr>
+
+<tr>
+<td class="unit">111 112</td>
+<td class="coord">36.85291816769771, -119.73583550486616</td>
+</tr>
+
+<tr>
+<td class="unit">113 114</td>
+<td class="coord">36.85306355913218, -119.73583160757708</td>
+</tr>
+
+<tr>
+<td class="unit">115 116</td>
+<td class="coord">36.853208395842245, -119.73583641590297</td>
+</tr>
+
+<tr>
+<td class="unit">117 118</td>
+<td class="coord">36.853347228522644, -119.73583787500188</td>
+</tr>
+
+<tr>
+<td class="unit">119 120</td>
+<td class="coord">36.85331908915208, -119.73594860350637</td>
+</tr>
+
+<tr>
+<td class="unit">121 122</td>
+<td class="coord">36.853522922822016, -119.73595692884393</td>
+</tr>
+
+<tr>
+<td class="unit">123 124</td>
+<td class="coord">36.85348822991712, -119.73583754478749</td>
+</tr>
+
+<tr>
+<td class="unit">125 126</td>
+<td class="coord">36.85363522947852, -119.73583967050274</td>
+</tr>
+
+<tr>
+<td class="unit">127 128</td>
+<td class="coord">36.853780897570225, -119.73600761026967</td>
+</tr>
+
+<tr>
+<td class="unit">129 130</td>
+<td class="coord">36.85377936678785, -119.73575097706657</td>
+</tr>
+
+<tr>
+<td class="unit">131 132</td>
+<td class="coord">36.85378351442672, -119.73536932275218</td>
+</tr>
+
+<tr>
+<td class="unit">133 134</td>
+<td class="coord">36.8537834962317, -119.73510857025755</td>
+</tr>
+
+<tr>
+<td class="unit">135 136</td>
+<td class="coord">36.85360512029373, -119.73528362606675</td>
+</tr>
+
+<tr>
+<td class="unit">137 138</td>
+<td class="coord">36.85361018391303, -119.73517012426414</td>
+</tr>
+
+<tr>
+<td class="unit">139 140</td>
+<td class="coord">36.85342929526946, -119.73528435109071</td>
+</tr>
+
+<tr>
+<td class="unit">141 142</td>
+<td class="coord">36.85343939227027, -119.73516848857159</td>
+</tr>
+
+<tr>
+<td class="unit">143 144</td>
+<td class="coord">36.853155828046496, -119.73528031579862</td>
+</tr>
+
+<tr>
+<td class="unit">145 146</td>
+<td class="coord">36.85315413410128, -119.73517045164002</td>
+</tr>
+
+<tr>
+<td class="unit">147 148</td>
+<td class="coord">36.853011636750196, -119.73527903033458</td>
+</tr>
+
+<tr>
+<td class="unit">149 150</td>
+<td class="coord">36.85301753910293, -119.73516576963364</td>
+</tr>
+
+<tr>
+<td class="unit">151 152</td>
+<td class="coord">36.85287442487993, -119.73527924076852</td>
+</tr>
+
+<tr>
+<td class="unit">153 154</td>
+<td class="coord">36.85287459855586, -119.73516807190413</td>
+</tr>
+
+<tr>
+<td class="unit">155 156</td>
+<td class="coord">36.852608162550396, -119.73539867715697</td>
+</tr>
+
+<tr>
+<td class="unit">157 158</td>
+<td class="coord">36.85251127421867, -119.73536654815042</td>
+</tr>
+
+<tr>
+<td class="unit">159 160 office</td>
+<td class="coord">36.852514919066195, -119.73508612506026</td>
+</tr>
+
+<tr>
+<td class="unit">161 162</td>
+<td class="coord">36.85261409715976, -119.7350643893657</td>
+</tr>
+
+<tr>
+<td class="unit">163 164</td>
+<td class="coord">36.85251498865446, -119.73471256477765</td>
+</tr>
+
+<tr>
+<td class="unit">165 166</td>
+<td class="coord">36.85252012905856, -119.73444755321896</td>
+</tr>
+
+<tr>
+<td class="unit">167 168</td>
+<td class="coord">36.85262076451686, -119.73471028930136</td>
+</tr>
+
+<tr>
+<td class="unit">169 170</td>
+<td class="coord">36.85277485494523, -119.73449929824173</td>
+</tr>
+
+<tr>
+<td class="unit">171 172</td>
+<td class="coord">36.852982400849726, -119.73449718824699</td>
+</tr>
+
+<tr>
+<td class="unit">173 174</td>
+<td class="coord">36.85292515210104, -119.73462145843463</td>
+</tr>
+
+<tr>
+<td class="unit">175 176</td>
+<td class="coord">36.85306363292127, -119.73462238604543</td>
+</tr>
+
+<tr>
+<td class="unit">177 178</td>
+<td class="coord">36.85320345886824, -119.73462232106057</td>
+</tr>
+
+<tr>
+<td class="unit">179 180</td>
+<td class="coord">36.85335195291358, -119.73462146824168</td>
+</tr>
+
+<tr>
+<td class="unit">181 182</td>
+<td class="coord">36.853325110561975, -119.73450328157962</td>
+</tr>
+
+<tr>
+<td class="unit">183 184</td>
+<td class="coord">36.853538460859845, -119.7345090255608</td>
+</tr>
+
+<tr>
+<td class="unit">185 186</td>
+<td class="coord">36.85349714601966, -119.7346235891909</td>
+</tr>
+
+<tr>
+<td class="unit">187 188</td>
+<td class="coord">36.853642584504485, -119.73462295824321</td>
+</tr>
+
+<tr>
+<td class="unit">189 190</td>
+<td class="coord">36.853792620921574, -119.73472214939684</td>
+</tr>
+
+<tr>
+<td class="unit">191 192</td>
+<td class="coord">36.85379141466552, -119.73445517758763</td>
 </tr>
 
 </tbody>
