--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ a { text-decoration: none; color: #000; }
 
 <div id="num-apt-mapped" class="site-note" style="text-align: center;">
 	<span style="font-size:10pt;"><b>
-		2024, Jun 2nd	</b></span>
+		2024, Jun 3rd	</b></span>
 </div>
 
 <div class="mapp-filter display-none">
@@ -353,6 +353,110 @@ a { text-decoration: none; color: #000; }
 <tr>
 <td class="unit">55 56 57 58 59</td>
 <td class="coord">36.806436898006496, -119.71794549834867</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
+</div><div class="mapp-content">
+
+<span class="mapp-title">
+	Arbor Faire Senior Apartments
+	<span class="mapp-city">-
+	Fresno, CA 93711
+	</span>
+</span>
+
+<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>N Feland Ave</u>.</li></ul>
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">5173 N Feland Ave <br>5175 N Feland Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">community</td>
+<td class="coord">36.810765844075256, -119.84900262884675</td>
+</tr>
+
+<tr>
+<td class="unit">101 103 105</td>
+<td class="coord">36.81078749912628, -119.84917032198547</td>
+</tr>
+
+<tr>
+<td class="unit">102 104 106</td>
+<td class="coord">36.81078417746554, -119.84941849663139</td>
+</tr>
+
+<tr>
+<td class="unit">107 109 111 113</td>
+<td class="coord">36.810653325458965, -119.84990944519389</td>
+</tr>
+
+<tr>
+<td class="unit">108 110 112 114</td>
+<td class="coord">36.81086161797302, -119.84990443632043</td>
+</tr>
+
+<tr>
+<td class="unit">115 117 119 121</td>
+<td class="coord">36.811073833095264, -119.85013935947447</td>
+</tr>
+
+<tr>
+<td class="unit">116 118 120 122</td>
+<td class="coord">36.811083011395695, -119.84987810170274</td>
+</tr>
+
+<tr>
+<td class="unit">123 125 127 129</td>
+<td class="coord">36.811475874175436, -119.85013984217274</td>
+</tr>
+
+<tr>
+<td class="unit">124 126 128 130</td>
+<td class="coord">36.81147669495929, -119.84988415543684</td>
+</tr>
+
+<tr>
+<td class="unit">131 133 135 137</td>
+<td class="coord">36.81165625114548, -119.8493853258388</td>
+</tr>
+
+<tr>
+<td class="unit">132 134 136 138</td>
+<td class="coord">36.81144475463862, -119.84938542502185</td>
+</tr>
+
+<tr>
+<td class="unit">139 141 143</td>
+<td class="coord">36.811253062072154, -119.84910994635698</td>
+</tr>
+
+<tr>
+<td class="unit">140 142 144</td>
+<td class="coord">36.81125543577046, -119.84936425577533</td>
+</tr>
+
+<tr>
+<td class="unit">145 147 149</td>
+<td class="coord">36.811255912638245, -119.84942290223873</td>
+</tr>
+
+<tr>
+<td class="unit">146 148 150</td>
+<td class="coord">36.81125579109739, -119.84967499559255</td>
 </tr>
 
 </tbody>
@@ -6675,6 +6779,200 @@ a { text-decoration: none; color: #000; }
 <td class="bldg">25</td>
 <td class="unit">177 178 179 180 277 278 280</td>
 <td class="coord">36.8416299091489, -119.70186661359732</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
+</div><div class="mapp-content">
+
+<span class="mapp-title">
+	Country Club Estates
+	<span class="mapp-city">-
+	Fresno, CA 93711
+	</span>
+</span>
+
+<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>W Fir Ave</u>.</li></ul>
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">3150 W Fir Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102</td>
+<td class="coord">36.83982321866581, -119.84805723516655</td>
+</tr>
+
+<tr>
+<td class="unit">103 104</td>
+<td class="coord">36.839820080606806, -119.84826155158059</td>
+</tr>
+
+<tr>
+<td class="unit">105 106</td>
+<td class="coord">36.83982248793323, -119.84862323834066</td>
+</tr>
+
+<tr>
+<td class="unit">107 108</td>
+<td class="coord">36.839821077818584, -119.84882353606598</td>
+</tr>
+
+<tr>
+<td class="unit">109 110</td>
+<td class="coord">36.8398161998593, -119.84900600962149</td>
+</tr>
+
+<tr>
+<td class="unit">111 112</td>
+<td class="coord">36.83981760553379, -119.84920370828816</td>
+</tr>
+
+<tr>
+<td class="unit">113 114</td>
+<td class="coord">36.83971465988174, -119.8494033584748</td>
+</tr>
+
+<tr>
+<td class="unit">115 116</td>
+<td class="coord">36.83987827951701, -119.8494083774892</td>
+</tr>
+
+<tr>
+<td class="unit">117 118</td>
+<td class="coord">36.83990594049553, -119.84916159404912</td>
+</tr>
+
+<tr>
+<td class="unit">119 120</td>
+<td class="coord">36.839900560475506, -119.84897048853684</td>
+</tr>
+
+<tr>
+<td class="unit">121 122</td>
+<td class="coord">36.839903285124336, -119.84878854281109</td>
+</tr>
+
+<tr>
+<td class="unit">123 124</td>
+<td class="coord">36.83990187821434, -119.84858603319867</td>
+</tr>
+
+<tr>
+<td class="unit">125 126</td>
+<td class="coord">36.840097906156124, -119.84809661002471</td>
+</tr>
+
+<tr>
+<td class="unit">127 128</td>
+<td class="coord">36.84026356445153, -119.84809444125305</td>
+</tr>
+
+<tr>
+<td class="unit">129 130</td>
+<td class="coord">36.84033206647902, -119.8486345273292</td>
+</tr>
+
+<tr>
+<td class="unit">131 132</td>
+<td class="coord">36.84032406331547, -119.84882202595277</td>
+</tr>
+
+<tr>
+<td class="unit">133 134</td>
+<td class="coord">36.8403158337784, -119.84901147118866</td>
+</tr>
+
+<tr>
+<td class="unit">135 136</td>
+<td class="coord">36.840308697764954, -119.84920670836668</td>
+</tr>
+
+<tr>
+<td class="unit">137 138</td>
+<td class="coord">36.84006276550878, -119.84941708645728</td>
+</tr>
+
+<tr>
+<td class="unit">139 140</td>
+<td class="coord">36.84022244550907, -119.8494149077839</td>
+</tr>
+
+<tr>
+<td class="unit">141 142</td>
+<td class="coord">36.840380252218885, -119.84955576778671</td>
+</tr>
+
+<tr>
+<td class="unit">143 144</td>
+<td class="coord">36.840388250598664, -119.8493627748197</td>
+</tr>
+
+<tr>
+<td class="unit">145 146</td>
+<td class="coord">36.84039152640366, -119.84918112751555</td>
+</tr>
+
+<tr>
+<td class="unit">147 148</td>
+<td class="coord">36.84040258728898, -119.8489852346113</td>
+</tr>
+
+<tr>
+<td class="unit">149 150</td>
+<td class="coord">36.840409498797406, -119.84876282966998</td>
+</tr>
+
+<tr>
+<td class="unit">151 152</td>
+<td class="coord">36.84041938372511, -119.84856355798766</td>
+</tr>
+
+<tr>
+<td class="unit">153 154</td>
+<td class="coord">36.84042109645538, -119.84837652597753</td>
+</tr>
+
+<tr>
+<td class="unit">155 156</td>
+<td class="coord">36.84043053541301, -119.84818253892918</td>
+</tr>
+
+<tr>
+<td class="unit">157 158 159 160</td>
+<td class="coord">36.840512912350185, -119.84788726482903</td>
+</tr>
+
+<tr>
+<td class="unit">161 162</td>
+<td class="coord">36.84031116265925, -119.8480022229019</td>
+</tr>
+
+<tr>
+<td class="unit">163 164</td>
+<td class="coord">36.84010996695222, -119.84799260245492</td>
+</tr>
+
+<tr>
+<td class="unit">165 166</td>
+<td class="coord">36.83993753408771, -119.84799600239917</td>
+</tr>
+
+<tr>
+<td class="unit">167 168</td>
+<td class="coord">36.8397570762443, -119.84788584539095</td>
 </tr>
 
 </tbody>
@@ -15565,6 +15863,138 @@ a { text-decoration: none; color: #000; }
 </div><div class="mapp-content">
 
 <span class="mapp-title">
+	Papillon Apartments
+	<span class="mapp-city">-
+	Fresno, CA 93722
+	</span>
+</span>
+
+<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>N Figarden Dr</u>.</li></ul>
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">5464 N Figarden Dr <br>5466 N Figaden Dr</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">2</td>
+<td class="unit">117 118 119 120 217 218 219 220</td>
+<td class="coord">36.81752080270461, -119.8628741095205</td>
+</tr>
+
+<tr>
+<td class="bldg">3</td>
+<td class="unit">113 114 115 116 213 214 215 216</td>
+<td class="coord">36.817556869619764, -119.86311675816998</td>
+</tr>
+
+<tr>
+<td class="bldg">4</td>
+<td class="unit">105 106 107 108 205 206 207 208</td>
+<td class="coord">36.8172957943614, -119.86334502121504</td>
+</tr>
+
+<tr>
+<td class="bldg">5</td>
+<td class="unit">101 102 103 104 201 202 203 204</td>
+<td class="coord">36.81714643863696, -119.86349082179218</td>
+</tr>
+
+<tr>
+<td class="bldg">6</td>
+<td class="unit">161 162 163 164 262 263</td>
+<td class="coord">36.817414491593595, -119.86408242090032</td>
+</tr>
+
+<tr>
+<td class="bldg">7</td>
+<td class="unit">165 166 167 168 266 267</td>
+<td class="coord">36.817576500168556, -119.86433877300912</td>
+</tr>
+
+<tr>
+<td class="bldg">8</td>
+<td class="unit">153 154 155 156 253 254 255 256</td>
+<td class="coord">36.81778285658101, -119.86416690697169</td>
+</tr>
+
+<tr>
+<td class="bldg">9</td>
+<td class="unit">157 158 159 160 257 258 259 260</td>
+<td class="coord">36.81761476661893, -119.86390300082034</td>
+</tr>
+
+<tr>
+<td class="bldg">10</td>
+<td class="unit">109 110 111 112 209 210 211 212</td>
+<td class="coord">36.81755576649165, -119.86340696997316</td>
+</tr>
+
+<tr>
+<td class="bldg">11</td>
+<td class="unit">125 126 127 128 225 226 227 228</td>
+<td class="coord">36.81798563419775, -119.86337387145453</td>
+</tr>
+
+<tr>
+<td class="bldg">12</td>
+<td class="unit">149 150 151 152 249 250 251 252</td>
+<td class="coord">36.81809094233239, -119.86373368343806</td>
+</tr>
+
+<tr>
+<td class="bldg">13</td>
+<td class="unit">145 146 147 148 245 246 247 248</td>
+<td class="coord">36.81829506504934, -119.86349537609192</td>
+</tr>
+
+<tr>
+<td class="bldg">14</td>
+<td class="unit">141 142 143 144 241 242 243 244</td>
+<td class="coord">36.81854117040564, -119.86332044921107</td>
+</tr>
+
+<tr>
+<td class="bldg">15</td>
+<td class="unit">137 138 139 140 237 238 239 240</td>
+<td class="coord">36.81872796760839, -119.86301223948409</td>
+</tr>
+
+<tr>
+<td class="bldg">16</td>
+<td class="unit">133 134 135 136 233 234 235 236</td>
+<td class="coord">36.81839734578377, -119.86295576406394</td>
+</tr>
+
+<tr>
+<td class="bldg">17</td>
+<td class="unit">129 130 131 132 229 230 231 232</td>
+<td class="coord">36.81811504132307, -119.86301744250892</td>
+</tr>
+
+<tr>
+<td class="bldg">18</td>
+<td class="unit">121 122 123 124 221 222 223 224</td>
+<td class="coord">36.81783439897491, -119.86302098057948</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
+</div><div class="mapp-content">
+
+<span class="mapp-title">
 	Parc Grove Commons
 	<span class="mapp-city">-
 	Fresno, CA 93703
@@ -17034,7 +17464,6 @@ a { text-decoration: none; color: #000; }
 	</span>
 </span>
 
-<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u></u>.</li></ul>
 <ul class="mapp-list">
 
 <li class="mapp-table">
@@ -30239,6 +30668,213 @@ unit #
 </div><div class="mapp-content">
 
 <span class="mapp-title">
+	Westwood Apartments
+	<span class="mapp-city">-
+	Fresno, CA 93726
+	</span>
+</span>
+
+<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>E Gettysburg Ave</u> or <u>N Chestnut Ave</u>.</li></ul>
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">4540 N Chestnut Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102 103 104</td>
+<td class="coord">36.800518735503815, -119.73612036447122</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4546 N Chestnut Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102 103</td>
+<td class="coord">36.80090523840876, -119.73612458949427</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4814 E Gettysburg Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">101 102 103</td>
+<td class="coord">36.80116370389113, -119.73594378540733</td>
+</tr>
+
+<tr>
+<td class="unit">104 105 106</td>
+<td class="coord">36.80116390332716, -119.73575519555243</td>
+</tr>
+
+<tr>
+<td class="unit">107 108</td>
+<td class="coord">36.80080065376818, -119.73561583572052</td>
+</tr>
+
+<tr>
+<td class="unit">109 110</td>
+<td class="coord">36.800552926941464, -119.735618204823</td>
+</tr>
+
+<tr>
+<td class="unit">111 112 113</td>
+<td class="coord">36.80050720716391, -119.73545353515051</td>
+</tr>
+
+<tr>
+<td class="unit">114 115 116 117</td>
+<td class="coord">36.800527301016764, -119.73529439146638</td>
+</tr>
+
+<tr>
+<td class="unit">118 119 120</td>
+<td class="coord">36.80078782060909, -119.73530095212818</td>
+</tr>
+
+<tr>
+<td class="unit">121 122 123</td>
+<td class="coord">36.80069387254786, -119.73546343303072</td>
+</tr>
+
+<tr>
+<td class="unit">124 125 126 127 128</td>
+<td class="coord">36.80116194061156, -119.73535658816125</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4834 E Gettysburg Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="unit">office pool</td>
+<td class="coord">36.80048856236227, -119.73456501693322</td>
+</tr>
+
+<tr>
+<td class="unit">101 102</td>
+<td class="coord">36.80115306667864, -119.73501627023664</td>
+</tr>
+
+<tr>
+<td class="unit">103 104 105</td>
+<td class="coord">36.80075578042136, -119.73492854623507</td>
+</tr>
+
+<tr>
+<td class="unit">106 107 108</td>
+<td class="coord">36.80052897176522, -119.73492835267577</td>
+</tr>
+
+<tr>
+<td class="unit">109 110 111 112</td>
+<td class="coord">36.80040157171641, -119.73491013331343</td>
+</tr>
+
+<tr>
+<td class="unit">113 114 115 116</td>
+<td class="coord">36.80008130657108, -119.73490629643032</td>
+</tr>
+
+<tr>
+<td class="unit">117 118 119 120</td>
+<td class="coord">36.79992340559043, -119.73492753522771</td>
+</tr>
+
+<tr>
+<td class="unit">121 122 123 124</td>
+<td class="coord">36.79966201483528, -119.73492436880609</td>
+</tr>
+
+<tr>
+<td class="unit">125 126 127 128 129</td>
+<td class="coord">36.7998249112928, -119.73464375121665</td>
+</tr>
+
+<tr>
+<td class="unit">130 131 132 133</td>
+<td class="coord">36.79978309792386, -119.73438708761111</td>
+</tr>
+
+<tr>
+<td class="unit">134 135 136 137 138</td>
+<td class="coord">36.79995329592852, -119.73441515814444</td>
+</tr>
+
+<tr>
+<td class="unit">139 140 141 142 143</td>
+<td class="coord">36.80027593974473, -119.73444367575144</td>
+</tr>
+
+<tr>
+<td class="unit">144 145 146 147</td>
+<td class="coord">36.80046491019723, -119.7344061005723</td>
+</tr>
+
+<tr>
+<td class="unit">148 149 150 151</td>
+<td class="coord">36.80069445618113, -119.73470124046919</td>
+</tr>
+
+<tr>
+<td class="unit">152 153 154 155</td>
+<td class="coord">36.80115526396474, -119.7347030804042</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
+</div><div class="mapp-content">
+
+<span class="mapp-title">
 	Willow Creek Apartments
 	<span class="mapp-city">-
 	Fresno, CA 93720
@@ -32340,14 +32976,9 @@ document.getElementById("light-off").addEventListener("click", function() {
 /* jquery functions starts */
 jQuery(document).ready(function($) {
 
+/* header misc */
 var headerheight = $("#header").outerHeight();
 $("#mapped").css({ 'margin-top' : headerheight + 5 });
-
-/* header */
-$("#mapped").click(function() {
-	$(".mapp-content").removeAttr("style");
-	$("#t-search input").val('');
-});
 
 /* #header - show when scroll down - hide when scroll up */
 var lastScrollTop = 0;
@@ -32402,7 +33033,7 @@ $(".mapp-filter input").on("keyup", function() {
 });
 
 /* copy address into a div in title for filter search */
-$("<div></div>").appendTo('#mapped .mapp-title');
+$("<div class='display-none'></div>").appendTo('#mapped .mapp-title');
 $("#mapped .mapp-address").each(function() {
 	$(this).clone().appendTo($(this).parent().parent().parent().find("div"));
 	$('#mapped .mapp-title div span span').remove();
@@ -32447,9 +33078,6 @@ $("#mapped .mapp-content").click(function() {
 
 	$(".mapp-filter").insertAfter("#mapp-fixed .mapp-title");
 
-	$('#mapp-fixed .mapp-title div').removeAttr('style');
-	$("#mapp-fixed .mapp-title div").addClass("display-none");
-
 	$("#close-fixed, #mapp-fixed, .mapp-filter").removeClass("display-none");
 });
 
@@ -32458,15 +33086,21 @@ $("#close-fixed").click(function() {
 	var mappfixed = $('#mapp-fixed');
     mappfixed.scrollTop(0);
 	
-	$('.mapp-title, .mapp-title div').removeAttr('style');
-	$("#close-fixed, #mapp-fixed, .mapp-filter, .mapp-title div").addClass("display-none");
-	
-	$(".mapp-filter input").val('');
+	$('.mapp-title').removeAttr('style');
+	$("#close-fixed, #mapp-fixed, .mapp-filter").addClass("display-none");
+
+	$("#t-search input, .mapp-filter input").val('');
 	$(".mapp-filter").prependTo("#mapped");
 	
 	$(".site-note").removeClass("display-none");
 	
 	$("#mapp-fixed .mapp-content").remove();
+});
+
+/* hide address number */
+$("#mapped .mapp-content, #close-fixed").click(function() {
+	$('.mapp-title div').removeAttr('style');
+	$(".mapp-title div").addClass("display-none");
 });
 
 /* toggle show-hide table */
@@ -32494,9 +33128,6 @@ $(document).on("click", ".copy-coord", function() {
 		copycoordbtn.html('<a>copy</a>');
 	}, 1500);
 });
-
-/* add "display-none" class on load */
-$(".mapp-title div").addClass('display-none');
 
 /* count and display apt mapped */
 var aptmapped = $('.mapp-content').length;
