--- a/source/mapped/template.html
+++ b/source/mapped/template.html
@@ -10,7 +10,7 @@
 <?php echo 
 '<ul class="mapp-note">', 
 
-$entrance, '<u></u>', '.</li>',
+$entrance, '<u><!-- street name --></u>', '.</li>',
 
 '',
 
@@ -33,9 +33,9 @@ $entrance, '<u></u>', '.</li>',
 <tbody>
 
 <tr>
-<td class="bldg"></td>
-<td class="unit"></td>
-<td class="coord"></td>
+<td class="bldg"><!-- building number or letter --></td>
+<td class="unit"><!-- unit or apt number --></td>
+<td class="coord"><!-- map coordinates --></td>
 </tr>
 
 </tbody>
